# DriveGen

./: .gitignore  README.md  cred.json  main.py  pyproject.toml  server.py  test.ipynb
Frondend/myapp/: package-lock.json  package.json
Frondend/myapp/src/: App.jsx  page.jsx
mcp_server/: Agent.py  helper.py  helper_fun.py  mcp_server1.py  mcp_server2.py  sample.py
