[project]
name = "drive-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "gdrive-access",
    "google-api-python-client>=2.166.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "langchain>=0.3.21",
    "langchain-groq>=0.3.1",
    "langchain-mcp-adapters>=0.0.3",
    "langgraph>=0.3.21",
    "mcp[cli]>=1.6.0",
    "multipart>=1.2.1",
    "python-multipart>=0.0.20",
    "telegram>=0.0.1",
    "telethon>=1.39.0",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
gdrive-access = { git = "https://github.com/theunissenlab/gdrive_python.git", rev = "v0.1.0" }
